--- a/src/app/personnels/info-person/curriculum-vitae/curriculum-vitae.component.html
+++ b/src/app/personnels/info-person/curriculum-vitae/curriculum-vitae.component.html
@@ -7,6 +7,7 @@
       <div *ngIf="message.condition" [ngClass]="'alert alert-'+ message.type">
         {{message.content}}
       </div>
+
     </div>
     <div class="row info-basic mgb-20">
       <div class="col-xs-12 col-sm-12 col-md-3 ">
@@ -31,7 +32,7 @@
 
             <div class="item-control" style="clear: none">
               <label class="item-title">2, Họ và tên <span class="star">*</span></label>
-              <input name="fullName" type="text" formControlName="fullName"  text-validator/>
+              <input name="fullName" type="text" formControlName="fullName" text-validator/>
 
               <div class="star" *ngIf="(!formCV.controls.fullName.errors.valid)">
                 {{messageError.fullName}}
@@ -204,9 +205,7 @@
           <label class="item-title">10, Dân tộc </label>
           <select class="form-control" formControlName="nation" type="select" required text-validator>
             <option value="0">----chọn----</option>
-            <option value="kinh">kinh</option>
-
-            <option value="item.name" *ngFor="let item of listNation">{{item.name}}</option>
+             <option [value]="item.name" *ngFor="let item of listNation  | orderBy: 'name'">{{item.name}}</option>
           </select>
 
 
@@ -241,7 +240,7 @@
           <input type="text" formControlName="identityNumber" required #identityNumber text-validator/>
 
           <div class="star" *ngIf="(!formCV.controls.identity.controls.identityNumber.errors.valid)">
-            {{messageError.indentityNumber}}
+            {{messageError.identityNumber}}
           </div>
 
         </div>
