--- a/src/app/personnels/info-person/family-relationship/family-relationship.component.html
+++ b/src/app/personnels/info-person/family-relationship/family-relationship.component.html
@@ -3,9 +3,10 @@
   <form>
     <!---->
     <div class="action-form" style="margin-bottom: 10px;">
-      <button>Ghi nhận</button>
-      <button>Khóa dữ liệu</button>
-      <!--<button (click)="openModal(modalFamily)"> Thêm dữ liệu</button>-->
+      <button (click)="onSave()">Ghi nhận</button>
+      <div *ngIf="message.condition" [ngClass]="'alert alert-'+ message.type">
+        {{message.content}}
+      </div>
     </div>
     <!---->
     <div class="table-responsive">
@@ -28,13 +29,12 @@
         <tr *ngFor="let item of listRelationFamily.toArray(); let i = index ">
           <td>{{i+1}}</td>
           <td>{{item.relation}}</td>
-          <td>{{item.fullName}}</td>
-          <td>{{item.birthDay}}</td>
+          <td>{{item.name}}</td>
+          <td>{{item.yearBirth}}</td>
           <td>{{item.job}}</td>
           <td>
-            <span class="action-icon" (click)="editItem(i)"><i class="fa fa-edit"></i></span>
-            <span class="action-icon" (click)="removeItem(i)"><i class="fa fa-remove"></i></span>
-            <span class="action-icon"><i class="fa fa-lock"></i></span>
+            <span class="action-icon" (click)="editItem(item)"><i class="fa fa-edit"></i></span>
+            <span class="action-icon" (click)="removeItem(item)"><i class="fa fa-remove"></i></span>
           </td>
         </tr>
         <!---->
@@ -61,7 +61,7 @@
           <!---->
           <div class="item-control pdt-i-0">
             <label>Họ tên</label>
-            <input type="text" class="form-control" formControlName="fullName"/>
+            <input type="text" class="form-control" formControlName="name"/>
           </div>
           <!---->
 
@@ -70,6 +70,8 @@
             <label>Quan hệ </label>
             <select class="form-control" formControlName="relation">
               <option value="">----Lựa chọn-----</option>
+              <option style="text-transform: capitalize" *ngFor="let item of listRealtion" [value]="item">{{item}}
+              </option>
             </select>
           </div>
 
@@ -78,8 +80,11 @@
 
         <div class="col-xs-12 col-sm-6">
           <div class="item-control pdt-i-0">
-            <label>Ngày sinh </label>
-            <input type="date" class="form-control" formControlName="birthDay"/>
+            <label>Năm sinh </label>
+            <select class="form-control" formControlName="yearBirth">
+              <option *ngFor="let item of listYear" [value]="item">{{item}}</option>
+            </select>
+
           </div>
           <!---->
           <div class="item-control">
@@ -92,7 +97,7 @@
   </modal-body>
 
   <modal-footer>
-    <button class="btn-action" (click)="addItem()">Thêm</button>
+    <button class="btn-action" (click)="addItem()">{{updateTemp == null?'Thêm':'Cập nhật '}}</button>
   </modal-footer>
 
 </modal>
