--- a/src/app/personnels/info-person/contract/contract.component.html
+++ b/src/app/personnels/info-person/contract/contract.component.html
@@ -3,10 +3,14 @@
     Danh sách hợp đồng lao động
   </div>
   <form action="">
-  <div class="action-form" style="margin-bottom: 10px;">
-    <button>Ghi nhận</button>
-    <button>Khóa dữ liêu</button>
-  </div>
+    <div class="action-form" style="margin-bottom: 10px;">
+      <button (click)="onSave()">Ghi nhận</button>
+      <!--<button>Khóa dữ liêu</button>-->
+      <div *ngIf="message.condition" [ngClass]="'alert alert-'+ message.type">
+        {{message.content}}
+      </div>
+
+    </div>
     <div class="table-responsive">
       <table class="table table-bordered">
         <thead>
@@ -27,16 +31,16 @@
         <tbody>
         <tr *ngFor="let item of listContracts.toArray();let i = index">
           <td>{{i+1}}</td>
-          <td>{{item.number}}</td>
-          <td>{{item.specie}}</td>
-          <td>{{item.dateEffect}}</td>
-          <td>{{item.dateEndEffect}}</td>
+          <td>{{(item.numberContact)}}</td>
+          <td>{{getContact(item.specie)!=null?getContact(item.specie).title:''}}</td>
+          <td>{{item.dateEffect | date: 'dd/MM/yyyy'}}</td>
+          <td>{{item.dateEndEffect | date: 'dd/MM/yyyy'}}</td>
           <td>{{item.unitOrgan}}</td>
           <td>{{item.job}}</td>
           <td>
             <span class="action-icon" (click)="editItem(i)"><i class="fa fa-edit"></i></span>
             <span class="action-icon" (click)="removeItem(i)"><i class="fa fa-remove "></i></span>
-            <span class="action-icon"><i class="fa fa-lock"></i></span>
+            <!--<span class="action-icon"><i class="fa fa-lock"></i></span>-->
           </td>
         </tr>
         <!---->
@@ -44,7 +48,7 @@
       </table>
     </div>
 
-</form>
+  </form>
 </div>
 
 
@@ -64,16 +68,16 @@
 
           <div class="item-control pdt-i-0">
             <label>Số HD</label>
-            <input type="text" class="form-control" formControlName="number">
+            <input type="text" class="form-control" formControlName="numberContact" [value]="initData.numberContact">
           </div>
           <!---->
           <div class="item-control">
             <label>Ngày hiệu lực </label>
-            <input type="date" class="form-control" formControlName="dateEffect">
+            <input type="date" class="form-control" formControlName="dateEffect" [value]="initData.dateEffect | date:'yyyy-MM-dd'">
           </div>
           <div class="item-control">
             <label>Đơn vị tuyển dụng </label>
-            <input type="date" class="form-control" formControlName="unitOrgan">
+            <input type="text" class="form-control" formControlName="unitOrgan" [value]="initData.unitOrgan">
           </div>
 
         </div>
@@ -81,20 +85,19 @@
         <div class="col-xs-12 col-sm-6 ">
           <div class="item-control pdt-i-0 ">
             <label>Loại HD </label>
-            <select class="form-control" formControlName="specie">
-              <option selected value="Hợp đồng lao động không xác định thời hạn">Hợp đồng lao động không xác định thời hạn</option>
-              <option value="Hợp đồng lao động xác định thời hạn"> Hợp đồng lao động xác định thời hạn</option>
+            <select class="form-control" formControlName="specie" [value]="initData.specie">
+              <option *ngFor="let item of contactType" [value]="item.value">{{item.title}}</option>
             </select>
           </div>
 
           <div class="item-control">
             <label>Ngày hết hiệu lực </label>
-            <input type="date" class="form-control" formControlName="dateEndEffect">
+            <input type="date" class="form-control" formControlName="dateEndEffect" [value]="initData.dateEndEffect | date:'yyyy-MM-dd'">
           </div>
 
           <div class="item-control">
             <label>Công việc đảm nhận </label>
-            <input type="text" class="form-control" formControlName="job">
+            <input type="text" class="form-control" formControlName="job" [value]="initData.job">
           </div>
         </div>
       </div>
